[package]
name = "okf"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.74"
authors = ["Walter van der Giessen <waltervdgiessen@gmail.com>"]
description = "A pure-Rust, zero-dependency implementation of the Open Knowledge Format (OKF) v0.1: parser, model, validator, link graph, and index/log tooling."
license = "Apache-2.0"
repository = "https://github.com/W4G1/okf"
# Informational link to the format this crate implements (the upstream OKF spec).
homepage = "https://github.com/GoogleCloudPlatform/knowledge-catalog/tree/main/okf"
keywords = ["okf", "knowledge", "markdown", "frontmatter", "metadata"]
categories = ["parser-implementations", "data-structures"]
readme = "README.md"
exclude = [".gitignore"]

# OKF is, by design, "markdown files with YAML frontmatter". None of that
# requires a third-party crate, so this implementation has *zero* dependencies
# and builds on the standard library alone (including its own YAML-subset
# parser, markdown link scanner, directory walker, and CLI argument parsing).
[dependencies]

[[bin]]
name = "okf"
path = "src/bin/okf.rs"

[lib]
name = "okf"
path = "src/lib.rs"
